<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CoordinatorLayoutFitsSystemWindows">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="@dimen/screen_edge"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/fragment_saved_search_builder_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_saved_search_builder_name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_saved_search_builder_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text|textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/saved_search_builder_list_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_saved_search_builder_include_notebooks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/saved_search_builder_include_notebooks"
                    android:inputType="text|textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/saved_search_builder_list_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_saved_search_builder_exclude_notebooks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/saved_search_builder_exclude_notebooks"
                    android:inputType="text|textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/saved_search_builder_list_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_saved_search_builder_include_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/saved_search_builder_include_tags"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/saved_search_builder_list_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_saved_search_builder_exclude_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/saved_search_builder_exclude_tags"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/saved_search_builder_list_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_saved_search_builder_include_states"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/saved_search_builder_include_states"
                    android:inputType="text|textCapCharacters" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/saved_search_builder_list_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_saved_search_builder_exclude_states"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/saved_search_builder_exclude_states"
                    android:inputType="text|textCapCharacters" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/saved_search_builder_properties_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_saved_search_builder_include_properties"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/saved_search_builder_include_properties"
                    android:inputType="textMultiLine"
                    android:minLines="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/saved_search_builder_properties_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_saved_search_builder_exclude_properties"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/saved_search_builder_exclude_properties"
                    android:inputType="textMultiLine"
                    android:minLines="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/fragment_saved_search_builder_exclude_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/saved_search_builder_exclude_done" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/fragment_saved_search_builder_date_filter_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/saved_search_builder_date_filter"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/fragment_saved_search_builder_date_sources_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/saved_search_builder_date_sources" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/fragment_saved_search_builder_date_source_scheduled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/saved_search_builder_date_source_scheduled" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/fragment_saved_search_builder_date_source_deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/saved_search_builder_date_source_deadline" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/fragment_saved_search_builder_date_source_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/saved_search_builder_date_source_event" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/fragment_saved_search_builder_sort_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/saved_search_builder_sort"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_saved_search_builder_advanced_query_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/saved_search_builder_advanced_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_saved_search_builder_advanced_query"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/saved_search_builder_advanced_query"
                    android:inputType="textMultiLine"
                    android:minLines="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/saved_search_builder_preview_helper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_saved_search_builder_query_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/query"
                    android:inputType="textMultiLine"
                    android:minLines="3" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/fragment_saved_search_builder_missing"
        style="@style/BigCenteredText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:text="@string/search_does_not_exist_anymore"
        android:visibility="gone" />

    <com.google.android.material.appbar.AppBarLayout
        style="@style/AppBarLayoutStyle">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_toolbar"
            style="@style/TopToolbar"
            app:menu="@menu/done"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/search" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/sync_toolbar_progress"
            style="@style/SyncProgressIndicator" />
    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
